--- a/DadoVentas/pom.xml
+++ b/DadoVentas/pom.xml
@@ -59,6 +59,11 @@
             <version>2.13.4.2</version>
             <type>jar</type>
         </dependency>
+        
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
